tests/unit/default/syntax-error/120-add-fk.e.t
---- IN ----
+FK
---- OUT ----
---- ERR ----
syntax: expected <table> after `+FK` instead of EOL at position 3 - at line 1
---- EXIT ----
1
